--- a/index.html
+++ b/index.html
@@ -3,38 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+  <header>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+    <h1 class="title">Reliable, efficient delivery<br>
+    <span class="bold-title">Powered by Technology</span></h1>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+    <p class="title-text">Our Artificial Intelligence powered tools use millions of project data points 
+    to ensure that your project is successful</p>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+  </header>
+  <main>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+    <section class="card-container">
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+      <div class="card card1 cyan">
+        <div>
+          <h2>Supervisor</h2>
+          <p>Monitors activity to identify project roadblocks</p>
+        </div>
+        <img src="./images/icon-supervisor.svg" alt="">
+      </div>
+      
+      <div class="card card2 red">
+        <div>
+          <h2>Team Builder</h2>
+          <p>Scans our talent network to create the optimal team for your project</p>
+        </div>
+        <img src="./images/icon-team-builder.svg" alt="">
+      </div>
 
-  
+      <div class="card card3 orange">
+        <div>
+          <h2>Karma</h2>
+          <p>Regularly evaluates our talent to ensure quality</p>
+        </div>
+        <img src="./images/icon-karma.svg" alt="">
+      </div>
+
+      <div class="card card4 blue">
+        <div>
+          <h2>Calculator</h2>
+          <p>Uses data from past projects to provide better delivery estimates</p>
+        </div>
+        <img src="./images/icon-calculator.svg" alt="">
+      </div>
+    </section>
+  </main> 
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
